# movie-ticket-booking-system

./: README.md  docker-compose.yml  pubspec.yaml  schema.sql
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/praktikum/: MainActivity.kt
app/: .gitignore  README.md  pubspec.yaml  sourcegen.sh
app/android/app/src/main/: AndroidManifest.xml
app/api/: pubspec.yaml
app/lib/: main.dart  post_view.dart
app/lib/adapters/: movie.dart  theatre.dart  user.dart
app/lib/pages/: booking.dart  login.dart  movie.dart  movie_browser.dart  register.dart  screening_timeline.dart  self.dart  theatre.dart  theatre_browser.dart  tickets.dart  user.dart
app/lib/scaffolds/: auth.dart
app/lib/widgets/: auth.dart  navbar.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/windows/runner/: main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  post_view.dart  user_post.dart
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rest/: .env  .env.default  Cargo.toml
rest/migrations/2023-05-19-133138_create_users/: down.sql  up.sql
rest/migrations/2023-05-19-133145_create_theatres/: down.sql  up.sql
rest/migrations/2023-05-19-133157_create_movies/: down.sql  up.sql
rest/migrations/2023-05-19-194013_create_halls/: down.sql  up.sql
rest/migrations/2023-05-19-194601_create_theatre_movies/: down.sql  up.sql
rest/migrations/2023-05-19-194601_create_theatre_screenings/: down.sql  up.sql
rest/migrations/2023-05-19-195239_create_theatre_permissions/: down.sql  up.sql
rest/migrations/2023-05-19-195746_create_tickets/: down.sql  up.sql
rest/migrations/2023-05-19-202155_create_movie_reviews/: down.sql  up.sql
rest/migrations/2023-05-19-202540_create_email_confirmations/: down.sql  up.sql
rest/migrations/2023-05-19-202547_create_external_credentials/: down.sql  up.sql
rest/migrations/2023-05-20-082536_create_ticket_types/: down.sql  up.sql
rest/migrations/2023-05-31-182702_create_languages/: down.sql  up.sql
rest/migrations/2023-05-31-182708_add_languages/: up.sql
rest/migrations/2023-06-01-055452_create_theatre_roles/: down.sql  up.sql
rest/migrations/2023-06-01-055501_add_theatre_roles/: down.sql  up.sql
rest/migrations/2023-06-01-055517_create_users_theatre_roles/: down.sql  up.sql
rest/src/: auth_handler.rs  doc.rs  mailer.rs  main.rs  model.rs  password.rs  schema.rs  user.rs  util.rs  vars.rs
rest/src/handlers/: auth.rs  language.rs  mod.rs  movie.rs  role.rs  user.rs
rest/src/handlers/theatre/: hall.rs  mod.rs  movie.rs  permission.rs  role.rs  screening.rs  ticket.rs  ticket_type.rs
rest/src/services/: bridge_role.rs  language.rs  mod.rs  movie.rs  role.rs  theatre.rs  user.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
