[package]
name = "internship-app-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
argon2 = "0.5"
dotenv = "0.15"
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "serde_json", "r2d2"] }
deadpool-diesel = { version = "0.4.1", features = ["postgres", "rt_tokio_1", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
uuid = { version = "1.3.3", features = ["serde"] }
serde_json = "1.0"
jsonwebtoken = "8.3.0"
casey = "0.4.0"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4"
futures-util = "0.3"
thiserror = "1.0"
