[package]
name = "internship-app-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4"
argon2 = "0.5"
dotenv = "0.15"
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "serde_json", "r2d2"] }
deadpool-diesel = { version = "0.4.1", features = ["postgres", "rt_tokio_1", "serde"] }
# doc
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
# types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde"] }
jsonwebtoken = "8.3.0"
# serde/validation
validator = { version = "0.16.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# logging
env_logger = "0.10.0"
log = "0.4"
# misc
thiserror = "1.0"
lazy_static = "1.4.0"
rayon = "1.7"
casey = "0.4.0"
futures-util = "0.3"
