[package]
name = "internship-app-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4"
argon2 = "0.5"
dotenv = "0.15"
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "serde_json", "r2d2"] }
deadpool-diesel = { version = "0.5", features = ["postgres", "rt_tokio_1", "serde"] }
tokio = { version = "1.36", features = ["sync", "macros", "rt"] }
# doc
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
# types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde"] }
jsonwebtoken = "9.2"
# serde/validation
validator = { version = "0.17.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# logging
env_logger = "0.11"
log = "0.4"
# error handling
thiserror = "1.0"
either = "1.10"
# misc
lazy_static = "1.4"
rayon = "1.9"
casey = "0.4"
futures-util = "0.3"
lettre = "0.11"
actix-cors = "0.7"
